fixed alignment

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -412,8 +412,6 @@ textarea {
 ============= */
 #nav-container ul {
   height: 100%;
-  border: 1px solid red;
-  display: inline-block;
 }
 @media (min-width: 992px) {
   #nav-container ul {
@@ -437,7 +435,6 @@ textarea {
   color: #003505;
   font-family: "noto sans kr", sans-serif;
   font-weight: 400;
-  padding: 0 20px;
   text-decoration: none;
   transition: 0.25s;
 }
@@ -445,6 +442,7 @@ textarea {
   #nav-container ul li a:link,
 #nav-container ul li a:visited {
     color: #fff;
+    padding: 0 20px;
   }
 }
 #nav-container ul li a:link:hover, #nav-container ul li a:link:active,
@@ -469,7 +467,6 @@ textarea {
 }
 #header > div {
   display: grid;
-  grid-template-columns: 80% auto;
   grid-template-areas: "h1 burger" "nav nav";
 }
 @media (min-width: 992px) {
