--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -6,8 +6,7 @@
 
     ul {
         height: 100%;
-        border: 1px solid red;
-        display: inline-block;
+        // display: inline-block;
 
     @include lg{
         display: flex;
@@ -29,11 +28,11 @@
         color: $forest;
         font-family: "noto sans kr", sans-serif;
         font-weight: 400;
-        padding: 0 20px;
         text-decoration: none;
         transition: 0.25s;
         @include lg{
             color: $white;
+            padding: 0 20px;
         }
 
         &:hover,
