--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -16,7 +16,7 @@
 
     >div{
         display: grid;
-        grid-template-columns: 80% auto;
+        // grid-template-columns: 90% auto;
         grid-template-areas: "h1 burger"
         "nav nav";
 
